--- a/exchangeable.ipynb
+++ b/exchangeable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebf0f625",
+   "id": "0042c2d0",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6db4a59",
+   "id": "f77e3355",
    "metadata": {},
    "source": [
     "# Exchangeability and Bayesian Updating"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8e4435f",
+   "id": "e4cac594",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499ec0af",
+   "id": "0b2e6e9e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d9e49d",
+   "id": "1f0c2c4b",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749d3edb",
+   "id": "dfcf48e1",
    "metadata": {},
    "source": [
     "## Independently and Identically Distributed\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91081ebe",
+   "id": "8104a019",
    "metadata": {},
    "source": [
     "### IID Means Past Observations Don’t Tell Us Anything About Future Observations\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42505b0a",
+   "id": "19d82827",
    "metadata": {},
    "source": [
     "## A Setting in Which Past Observations Are Informative\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e509fa3",
+   "id": "1f487a60",
    "metadata": {},
    "source": [
     "## Relationship Between IID and Exchangeable\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47852ae",
+   "id": "4c437e31",
    "metadata": {},
    "source": [
     "## Exchangeability\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5131db",
+   "id": "9036b2d5",
    "metadata": {},
    "source": [
     "## Bayes’ Law\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "768f5344",
+   "id": "78597fd6",
    "metadata": {},
    "source": [
     "## More Details about Bayesian Updating\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173d9c22",
+   "id": "a736f881",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c42117f",
+   "id": "858927b0",
    "metadata": {},
    "source": [
     "Now we’ll create a group of graphs that illustrate  dynamics induced by Bayes’ Law.\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65141c32",
+   "id": "379fb84a",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e22d5c",
+   "id": "dbcfdaff",
    "metadata": {},
    "source": [
     "Please look at the three graphs above created for an instance in which $ f $ is a uniform distribution on $ [0,1] $\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8834f388",
+   "id": "e11a9bca",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8405fce5",
+   "id": "b60e74da",
    "metadata": {},
    "source": [
     "Notice how the likelihood ratio, the middle graph, and the arrows compare with the previous instance of our example."
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2560beab",
+   "id": "9e8299ea",
    "metadata": {},
    "source": [
     "## Appendix"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31660954",
+   "id": "d836ad7d",
    "metadata": {},
    "source": [
     "### Sample Paths of $ \\pi_t $\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d62ed6d",
+   "id": "ab2bb000",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204847c1",
+   "id": "30660b8e",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4d2bd6",
+   "id": "fd5cc8be",
    "metadata": {},
    "source": [
     "We begin by generating $ N $ simulated $ \\{\\pi_t\\} $ paths with $ T $\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a5a5d1",
+   "id": "7bdd0602",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7734f059",
+   "id": "44dcba96",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf722f06",
+   "id": "2149f294",
    "metadata": {},
    "source": [
     "In the above example,  for most paths $ \\pi_t \\rightarrow 1 $.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e772dd4a",
+   "id": "31f521dd",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d984f1e1",
+   "id": "27749b8e",
    "metadata": {},
    "source": [
     "In the above graph we observe that now  most paths $ \\pi_t \\rightarrow 0 $."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ed83a5",
+   "id": "0b27f0d7",
    "metadata": {},
    "source": [
     "### Rates of convergence\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1979fa14",
+   "id": "e03981d0",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f9bc51",
+   "id": "f5873b2f",
    "metadata": {},
    "source": [
     "From the above graph, rates of convergence appear not to depend on whether $ F $ or $ G $ generates the data."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac06cbfa",
+   "id": "c9639594",
    "metadata": {},
    "source": [
     "### Graph of Ensemble Dynamics of $ \\pi_t $\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f88f9c3f",
+   "id": "1f546b9b",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff57997",
+   "id": "813b71e9",
    "metadata": {},
    "source": [
     "First, consider the case where $ F_a=F_b=1 $ and\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ebe6607",
+   "id": "5c9f39ea",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5befd3a",
+   "id": "84b979ca",
    "metadata": {},
    "source": [
     "The above graphs shows that when $ F $ generates the data, $ \\pi_t $ on average always heads north, while\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8722c56",
+   "id": "34e5e842",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe5cd97a",
+   "id": "6ab96c57",
    "metadata": {},
    "source": [
     "The above graph says that $ \\pi_t $ is inert and  remains at its initial value.\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51585d8",
+   "id": "16938de0",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b14099f",
+   "id": "e06f2007",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1007,7 +1007,7 @@
   }
  ],
  "metadata": {
-  "date": 1706246574.841498,
+  "date": 1706493928.9074676,
   "filename": "exchangeable.md",
   "kernelspec": {
    "display_name": "Python",
