--- a/pandas_panel.ipynb
+++ b/pandas_panel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18760771",
+   "id": "b9bb8240",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717aa28e",
+   "id": "a64dbfa8",
    "metadata": {},
    "source": [
     "# Pandas for Panel Data\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b7ee2b",
+   "id": "b69b72df",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a54bab",
+   "id": "88f7cfce",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2338b5",
+   "id": "1b002abf",
    "metadata": {},
    "source": [
     "## Slicing and Reshaping Data\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4da8100",
+   "id": "d7dfba16",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ea99fd",
+   "id": "d1221ec5",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2d23df",
+   "id": "f7f80249",
    "metadata": {},
    "source": [
     "Let’s have a look at what we’ve got to work with"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f993cb2",
+   "id": "bed44559",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81462f8e",
+   "id": "140e238a",
    "metadata": {},
    "source": [
     "The data is currently in long format, which is difficult to analyze when there are several dimensions to the data.\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0f45c0",
+   "id": "f20f979c",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2f6bce",
+   "id": "dbb020e3",
    "metadata": {},
    "source": [
     "To more easily filter our time series data, later on, we will convert the index into a `DateTimeIndex`"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75150b6d",
+   "id": "6fd2e995",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e66334c4",
+   "id": "74b0c75b",
    "metadata": {},
    "source": [
     "The columns contain multiple levels of indexing, known as a\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b16f796",
+   "id": "14b4153f",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1556c648",
+   "id": "78507dd5",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4429b1b0",
+   "id": "6a9519a6",
    "metadata": {},
    "source": [
     "Like before, we can select the country (the top level of our\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233fa2dc",
+   "id": "dc65ced3",
    "metadata": {
     "hide-output": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ce535f",
+   "id": "7e8d464e",
    "metadata": {},
    "source": [
     "Stacking and unstacking levels of the `MultiIndex` will be used\n",
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f99d3a7",
+   "id": "aed69b5b",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbfedc83",
+   "id": "aaecd97e",
    "metadata": {},
    "source": [
     "We can also pass in an argument to select the level we would like to\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6209aac5",
+   "id": "9a826447",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "050539ac",
+   "id": "27d87fcd",
    "metadata": {},
    "source": [
     "Using a `DatetimeIndex` makes it easy to select a particular time\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef0f500",
+   "id": "36bd1dbf",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b069c5f",
+   "id": "cf31c144",
    "metadata": {},
    "source": [
     "For the rest of lecture, we will work with a dataframe of the hourly\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e06f09b",
+   "id": "498d5fa4",
    "metadata": {
     "hide-output": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227b4cb8",
+   "id": "b1af3614",
    "metadata": {},
    "source": [
     "## Merging Dataframes and Filling NaNs\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c5c908e",
+   "id": "c6eb111a",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9a9c8e",
+   "id": "695cd8e1",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b48df3",
+   "id": "6af34f1f",
    "metadata": {},
    "source": [
     "First, we’ll select just the country and continent variables from\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf810ff",
+   "id": "a099c8c6",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80894bd",
+   "id": "ee633a76",
    "metadata": {},
    "source": [
     "We want to merge our new dataframe, `worlddata`, with `realwage_f`.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c64dade",
+   "id": "f177d4ce",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3072595f",
+   "id": "45c68ede",
    "metadata": {},
    "source": [
     "We can use either left, right, inner, or outer join to merge our\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6452f3e2",
+   "id": "bcf16b86",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "319ef5d1",
+   "id": "a707ab0d",
    "metadata": {},
    "source": [
     "Countries that appeared in `realwage_f` but not in `worlddata` will\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "054634e9",
+   "id": "c8d05a4f",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d33b34a",
+   "id": "24681433",
    "metadata": {},
    "source": [
     "We have three missing values!\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf06528",
+   "id": "376b0b4d",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7497b7e",
+   "id": "e58d6a9d",
    "metadata": {},
    "source": [
     "We don’t want to overwrite the entire series with this mapping.\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "960d8f34",
+   "id": "5f3a5f32",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160c6118",
+   "id": "62e985c2",
    "metadata": {},
    "source": [
     "We will also combine the Americas into a single continent - this will make our visualization nicer later on.\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70580f98",
+   "id": "de00f84e",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b373267",
+   "id": "252ebc38",
    "metadata": {},
    "source": [
     "Now that we have all the data we want in a single `DataFrame`, we will\n",
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5911b1b",
+   "id": "77a3b167",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aef9cf7",
+   "id": "b2b8bd00",
    "metadata": {},
    "source": [
     "While merging, we lost our `DatetimeIndex`, as we merged columns that\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7502d33f",
+   "id": "cde3e25c",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3521348",
+   "id": "16ed2944",
    "metadata": {},
    "source": [
     "Now that we have set the merged columns as the index, we can recreate a\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48040b79",
+   "id": "8d1c1aa5",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80985bc",
+   "id": "48fa7ced",
    "metadata": {},
    "source": [
     "The `DatetimeIndex` tends to work more smoothly in the row axis, so we\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492368e3",
+   "id": "0ba19c4d",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f40d3cc",
+   "id": "85b1feee",
    "metadata": {},
    "source": [
     "## Grouping and Summarizing Data\n",
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafced34",
+   "id": "9c846cf8",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41dc7892",
+   "id": "fe79829c",
    "metadata": {},
    "source": [
     "Using this series, we can plot the average real minimum wage over the\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ca8894",
+   "id": "ede72e2e",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ffb1c9b",
+   "id": "809d6a3f",
    "metadata": {
     "hide-output": false
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0802ce",
+   "id": "5f6f838e",
    "metadata": {},
    "source": [
     "Passing in `axis=1` to `.mean()` will aggregate over columns (giving\n",
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d4c238",
+   "id": "72925e90",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39df21f2",
+   "id": "cf6f83e8",
    "metadata": {},
    "source": [
     "We can plot this time series as a line graph"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286940c8",
+   "id": "8c043b18",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf9df65",
+   "id": "573b167a",
    "metadata": {},
    "source": [
     "We can also specify a level of the `MultiIndex` (in the column axis)\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b59022d",
+   "id": "6e8546a2",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da731558",
+   "id": "46e59816",
    "metadata": {},
    "source": [
     "We can plot the average minimum wages in each continent as a time series"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4010846c",
+   "id": "49d31984",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb994428",
+   "id": "d279a322",
    "metadata": {},
    "source": [
     "We will drop Australia as a continent for plotting purposes"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1224a59a",
+   "id": "27aa4091",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a222d69b",
+   "id": "24e82879",
    "metadata": {},
    "source": [
     "`.describe()` is useful for quickly retrieving a number of common\n",
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722369fc",
+   "id": "5121803f",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09cb80fe",
+   "id": "cbed5084",
    "metadata": {},
    "source": [
     "This is a simplified way to use `groupby`.\n",
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ea34a8",
+   "id": "5ebb5760",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb9f6d1",
+   "id": "f7074547",
    "metadata": {},
    "source": [
     "Calling an aggregation method on the object applies the function to each\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e675268",
+   "id": "d99eb919",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021bd3b6",
+   "id": "c7d43387",
    "metadata": {},
    "source": [
     "Calling `.get_group()` to return just the countries in a single group,\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698c8b94",
+   "id": "5922040b",
    "metadata": {
     "hide-output": false
    },
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8432a71b",
+   "id": "9e83a200",
    "metadata": {},
    "source": [
     "## Final Remarks\n",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbf2559",
+   "id": "a9572d08",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb7464d",
+   "id": "b9736924",
    "metadata": {},
    "source": [
     "## Exercise 1.1\n",
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54745e5",
+   "id": "25ee9549",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7c77aa",
+   "id": "96cdd656",
    "metadata": {},
    "source": [
     "Reading in the CSV file returns a panel dataset in long format. Use `.pivot_table()` to construct\n",
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f15febc",
+   "id": "ad3a7625",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.1](https://python.quantecon.org/#pp_ex1)"
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d587481",
+   "id": "564760d0",
    "metadata": {
     "hide-output": false
    },
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfad513",
+   "id": "8a683dc1",
    "metadata": {},
    "source": [
     "This is a large dataset so it is useful to explore the levels and\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d2f49d",
+   "id": "b1154bd2",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95dc7c1f",
+   "id": "3cc200d5",
    "metadata": {},
    "source": [
     "Variables within levels can be quickly retrieved with a loop"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6fffdf4",
+   "id": "e9eb847f",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beec957e",
+   "id": "a34c5f0b",
    "metadata": {},
    "source": [
     "## Exercise 1.2\n",
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d0f841",
+   "id": "613545c5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.2](https://python.quantecon.org/#pp_ex2)\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b56e93",
+   "id": "a1707c0d",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a916ba0",
+   "id": "c7d65ede",
    "metadata": {},
    "source": [
     "We need to get rid of a few items in `GEO` which are not countries.\n",
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92c6314",
+   "id": "a3783972",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08063b9",
+   "id": "2871ff21",
    "metadata": {},
    "source": [
     "Select only percentage employed in the active population from the\n",
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0fad3d",
+   "id": "bff0742b",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51130027",
+   "id": "09bbb430",
    "metadata": {},
    "source": [
     "Drop the ‘Total’ value before creating the grouped boxplot"
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ad36cf",
+   "id": "1afbecf6",
    "metadata": {
     "hide-output": false
    },
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6059c8",
+   "id": "a87957ad",
    "metadata": {
     "hide-output": false
    },
@@ -1252,7 +1252,7 @@
   }
  ],
  "metadata": {
-  "date": 1706246575.7992496,
+  "date": 1706493929.873617,
   "filename": "pandas_panel.md",
   "kernelspec": {
    "display_name": "Python",
