--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84ee43af",
+   "id": "0bca3a17",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67cc1f58",
+   "id": "fbe55365",
    "metadata": {},
    "source": [
     "# References\n",
@@ -19,16 +19,19 @@
     "<a id='id82'></a>\n",
     "\\[AJR01\\] Daron Acemoglu, Simon Johnson, and James A Robinson. The colonial origins of comparative development: an empirical investigation. *The American Economic Review*, 91(5):1369–1401, 2001.\n",
     "\n",
-    "<a id='id251'></a>\n",
+    "<a id='id253'></a>\n",
     "\\[And76\\] Harald Anderson. Estimation of a proportion through randomized response. *International Statistical Review/Revue Internationale de Statistique*, pages 213–217, 1976.\n",
     "\n",
-    "<a id='id257'></a>\n",
+    "<a id='id259'></a>\n",
     "\\[Apo90\\] George Apostolakis. The concept of probability in safety assessments of technological systems. *Science*, 250(4986):1359–1364, 1990.\n",
     "\n",
     "<a id='id98'></a>\n",
     "\\[Ber75\\] Dmitri Bertsekas. *Dynamic Programming and Stochastic Control*. Academic Press, New York, 1975.\n",
     "\n",
-    "<a id='id246'></a>\n",
+    "<a id='id244'></a>\n",
+    "\\[Bur23\\] Jennifer Burns. *Milton Friedman: The Last Conservative by Jennifer Burns*. Farrar, Straus, and Giroux, New York, 2023.\n",
+    "\n",
+    "<a id='id248'></a>\n",
     "\\[CM88\\] A Chadhuri and R Mukerjee. *Randomized Response: Theory and Technique*. Marcel Dekker, New York, 1988.\n",
     "\n",
     "<a id='id31'></a>\n",
@@ -37,49 +40,49 @@
     "<a id='id148'></a>\n",
     "\\[Dud02\\] R M Dudley. *Real Analysis and Probability*. Cambridge Studies in Advanced Mathematics. Cambridge University Press, 2002.\n",
     "\n",
-    "<a id='id259'></a>\n",
+    "<a id='id261'></a>\n",
     "\\[ESAW18\\] Ashraf Ben El-Shanawany, Keith H Ardron, and Simon P Walker. Lognormal approximations of fault tree uncertainty distributions. *Risk Analysis*, 38(8):1576–1584, 2018.\n",
     "\n",
-    "<a id='id252'></a>\n",
+    "<a id='id254'></a>\n",
     "\\[FPS77\\] Michael A Fligner, George E Policello, and Jagbir Singh. A comparison of two randomized response survey methods with consideration for the level of respondent protection. *Communications in Statistics-Theory and Methods*, 6(15):1511–1524, 1977.\n",
     "\n",
     "<a id='id94'></a>\n",
     "\\[FF98\\] Milton Friedman and Rose D Friedman. *Two Lucky People*. University of Chicago Press, 1998.\n",
     "\n",
-    "<a id='id254'></a>\n",
+    "<a id='id256'></a>\n",
     "\\[GAESH69\\] Bernard G Greenberg, Abdel-Latif A Abul-Ela, Walt R Simmons, and Daniel G Horvitz. The unrelated question randomized response model: theoretical framework. *Journal of the American Statistical Association*, 64(326):520–539, 1969.\n",
     "\n",
-    "<a id='id253'></a>\n",
+    "<a id='id255'></a>\n",
     "\\[GKAH77\\] Bernard G Greenberg, Roy R Kuebler, James R Abernathy, and Daniel G Horvitz. Respondent hazards in the unrelated question randomized response model. *Journal of Statistical Planning and Inference*, 1(1):53–60, 1977.\n",
     "\n",
-    "<a id='id258'></a>\n",
+    "<a id='id260'></a>\n",
     "\\[GS93\\] Moses A Greenfield and Thomas J Sargent. A probabilistic analysis of a catastrophic transuranic waste hoise accident at the wipp. Environmental Evaluation Group, Albuquerque, New Mexico, June 1993. URL: [http://www.tomsargent.com/research/EEG-53.pdf](http://www.tomsargent.com/research/EEG-53.pdf).\n",
     "\n",
-    "<a id='id244'></a>\n",
+    "<a id='id246'></a>\n",
     "\\[Hur50\\] Leonid Hurwicz. Least squares bias in time series. *Statistical inference in dynamic economic models*, 10:365–383, 1950.\n",
     "\n",
     "<a id='id97'></a>\n",
     "\\[Kre88\\] David M. Kreps. *Notes on the Theory of Choice*. Westview Press, Boulder, Colorado, 1988.\n",
     "\n",
-    "<a id='id255'></a>\n",
+    "<a id='id257'></a>\n",
     "\\[Lan75\\] Jan Lanke. On the choice of the unrelated question in simmons' version of randomized response. *Journal of the American Statistical Association*, 70(349):80–83, 1975.\n",
     "\n",
-    "<a id='id249'></a>\n",
+    "<a id='id251'></a>\n",
     "\\[Lan76\\] Jan Lanke. On the degree of protection in randomized interviews. *International Statistical Review/Revue Internationale de Statistique*, pages 197–203, 1976.\n",
     "\n",
-    "<a id='id250'></a>\n",
+    "<a id='id252'></a>\n",
     "\\[LW76\\] Frederick W Leysieffer and Stanley L Warner. Respondent jeopardy and optimal designs in randomized response models. *Journal of the American Statistical Association*, 71(355):649–656, 1976.\n",
     "\n",
-    "<a id='id248'></a>\n",
+    "<a id='id250'></a>\n",
     "\\[Lju93\\] Lars Ljungqvist. A unified approach to measures of privacy in randomized response models: a utilitarian perspective. *Journal of the American Statistical Association*, 88(421):97–103, 1993.\n",
     "\n",
     "<a id='id181'></a>\n",
     "\\[McC70\\] J J McCall. Economics of Information and Job Search. *The Quarterly Journal of Economics*, 84(1):113–126, 1970.\n",
     "\n",
-    "<a id='id276'></a>\n",
+    "<a id='id278'></a>\n",
     "\\[NP33\\] J. Neyman and E. S Pearson. On the problem of the most efficient tests of statistical hypotheses. *Phil. Trans. R. Soc. Lond. A. 231 (694–706)*, pages 289–337, 1933.\n",
     "\n",
-    "<a id='id243'></a>\n",
+    "<a id='id245'></a>\n",
     "\\[OW69\\] Guy H. Orcutt and Herbert S. Winokur. First order autoregression: inference, estimation, and prediction. *Econometrica*, 37(1):1–14, 1969.\n",
     "\n",
     "<a id='id80'></a>\n",
@@ -88,10 +91,13 @@
     "<a id='id99'></a>\n",
     "\\[Wal47\\] Abraham Wald. *Sequential Analysis*. John Wiley and Sons, New York, 1947.\n",
     "\n",
-    "<a id='id247'></a>\n",
+    "<a id='id243'></a>\n",
+    "\\[Wal80\\] W Allen Wallis. The statistical research group, 1942–1945. *Journal of the American Statistical Association*, 75(370):320–330, 1980.\n",
+    "\n",
+    "<a id='id249'></a>\n",
     "\\[War65\\] Stanley L Warner. Randomized response: a survey technique for eliminating evasive answer bias. *Journal of the American Statistical Association*, 60(309):63–69, 1965.\n",
     "\n",
-    "<a id='id245'></a>\n",
+    "<a id='id247'></a>\n",
     "\\[Wec79\\] William E Wecker. Predicting the turning points of a time series. *Journal of business*, pages 35–50, 1979.\n",
     "\n",
     "<a id='id81'></a>\n",
@@ -100,7 +106,7 @@
   }
  ],
  "metadata": {
-  "date": 1706246576.2401505,
+  "date": 1706493930.325982,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
