--- a/prob_matrix.ipynb
+++ b/prob_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "861de990",
+   "id": "6fd319c3",
    "metadata": {},
    "source": [
     "# Elementary Probability with Matrices\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ae3c5c",
+   "id": "1ebaf3b0",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd681780",
+   "id": "b4856150",
    "metadata": {},
    "source": [
     "As usual, we’ll start with some imports"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78cfb796",
+   "id": "30d280b0",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc170ccc",
+   "id": "e7fbfdaf",
    "metadata": {},
    "source": [
     "## Sketch of Basic Concepts\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecfbeb9a",
+   "id": "86204cd5",
    "metadata": {},
    "source": [
     "## What Does Probability Mean?\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4825b3b2",
+   "id": "db9227b8",
    "metadata": {},
    "source": [
     "## Representing  Probability Distributions\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc8bc33",
+   "id": "501e08a5",
    "metadata": {},
    "source": [
     "## Univariate Probability Distributions\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f91486",
+   "id": "e6456890",
    "metadata": {},
    "source": [
     "### Discrete random variable\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb35f959",
+   "id": "64f6a9d6",
    "metadata": {},
    "source": [
     "### Continuous random variable\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f5f439",
+   "id": "342665bd",
    "metadata": {},
    "source": [
     "## Bivariate Probability Distributions\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6156036c",
+   "id": "511402e4",
    "metadata": {},
    "source": [
     "## Marginal Probability Distributions\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43b60c1b",
+   "id": "f33f1f16",
    "metadata": {},
    "source": [
     "## Conditional Probability  Distributions\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1bf70e",
+   "id": "93286b4d",
    "metadata": {},
    "source": [
     "## Statistical Independence\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce22fcc",
+   "id": "5a7426c7",
    "metadata": {},
    "source": [
     "## Means and Variances\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d475934c",
+   "id": "b01090ad",
    "metadata": {},
    "source": [
     "## Generating Random Numbers\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d06f802",
+   "id": "10a7b76f",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095d2783",
+   "id": "91630c7b",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd552ba",
+   "id": "51cfcb6e",
    "metadata": {},
    "source": [
     "**Geometric distribution**\n",
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fca3d43",
+   "id": "76d3cf24",
    "metadata": {
     "hide-output": false
    },
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35937981",
+   "id": "c6c0133f",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4249078",
+   "id": "4a625799",
    "metadata": {
     "hide-output": false
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb21bbe3",
+   "id": "5e8d7e83",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a72f522",
+   "id": "bdae28c8",
    "metadata": {},
    "source": [
     "## Some Discrete Probability Distributions\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0800ba7f",
+   "id": "ef5f0f8e",
    "metadata": {},
    "source": [
     "## Geometric distribution\n",
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ea12f5",
+   "id": "a4d33f9e",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4df0fa4",
+   "id": "b50e3a12",
    "metadata": {},
    "source": [
     "### Newcomb–Benford distribution\n",
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f3afe8",
+   "id": "9f6b6190",
    "metadata": {
     "hide-output": false
    },
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c15271",
+   "id": "f3f0b242",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655b2880",
+   "id": "ff2f2c34",
    "metadata": {},
    "source": [
     "### Pascal (negative binomial) distribution\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c170da31",
+   "id": "50e25d83",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e259dc",
+   "id": "8ce24fc3",
    "metadata": {},
    "source": [
     "## Continuous Random Variables"
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67716ef3",
+   "id": "d6476aa9",
    "metadata": {},
    "source": [
     "### Univariate Gaussian distribution\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "914d6b8d",
+   "id": "51f9a5db",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d8fc46",
+   "id": "58843363",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92cc6174",
+   "id": "3ce6352e",
    "metadata": {},
    "source": [
     "### Uniform Distribution\n",
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4cbac5",
+   "id": "efe5ecc8",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ec43a4a",
+   "id": "cf278c15",
    "metadata": {},
    "source": [
     "## A Mixed Discrete-Continuous Distribution\n",
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbaad9e2",
+   "id": "284839a1",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc124eb",
+   "id": "3d4ce5d3",
    "metadata": {},
    "source": [
     "The analytical mean and variance can be computed:\n",
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b8e7659",
+   "id": "42dbc11b",
    "metadata": {
     "hide-output": false
    },
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d63f26",
+   "id": "48c9ea7f",
    "metadata": {},
    "source": [
     "## Matrix Representation of Some Bivariate Distributions\n",
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1047b3",
+   "id": "8bede1c8",
    "metadata": {
     "hide-output": false
    },
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f62d77",
+   "id": "fd830f40",
    "metadata": {},
    "source": [
     "Here, we use exactly the inverse CDF technique to generate sample from the joint distribution $ F $."
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84581d04",
+   "id": "70b60202",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ae6629",
+   "id": "383d6a4a",
    "metadata": {
     "hide-output": false
    },
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135a5d60",
+   "id": "816a6f43",
    "metadata": {},
    "source": [
     "Let’s  calculate population  marginal and conditional probabilities  using matrix algebra.\n",
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3f24436",
+   "id": "6d9646d1",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7d33dc",
+   "id": "c662eef5",
    "metadata": {},
    "source": [
     "Let’s apply our code to some examples.\n",
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df37e57b",
+   "id": "fed03c11",
    "metadata": {
     "hide-output": false
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36c28bd6",
+   "id": "31192c16",
    "metadata": {
     "hide-output": false
    },
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5106844",
+   "id": "24c040f9",
    "metadata": {
     "hide-output": false
    },
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db852492",
+   "id": "3bc1c065",
    "metadata": {},
    "source": [
     "**Example 2**"
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a8cc77",
+   "id": "e2a76d82",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85f3486",
+   "id": "704342c6",
    "metadata": {
     "hide-output": false
    },
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5a0204",
+   "id": "dc548dda",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cbb709e",
+   "id": "cddab70b",
    "metadata": {},
    "source": [
     "## A Continuous Bivariate Random Vector\n",
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87abe2c0",
+   "id": "40b6f764",
    "metadata": {
     "hide-output": false
    },
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1627a0a3",
+   "id": "ab168fac",
    "metadata": {
     "hide-output": false
    },
@@ -1691,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87e186eb",
+   "id": "c4d53939",
    "metadata": {
     "hide-output": false
    },
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c92b6bc",
+   "id": "edf61728",
    "metadata": {},
    "source": [
     "**Joint Distribution**\n",
@@ -1715,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a2ff985",
+   "id": "e40b7f43",
    "metadata": {
     "hide-output": false
    },
@@ -1733,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c40c95c",
+   "id": "c0811759",
    "metadata": {
     "hide-output": false
    },
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d505bf4f",
+   "id": "b0112a15",
    "metadata": {},
    "source": [
     "Next  we can simulate from  a built-in `numpy` function  and calculate a **sample** marginal distribution from the sample mean and variance."
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bc7667",
+   "id": "0e4949ff",
    "metadata": {
     "hide-output": false
    },
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d65d966",
+   "id": "c83120d1",
    "metadata": {},
    "source": [
     "**Marginal distribution**"
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b73c55",
+   "id": "111cde24",
    "metadata": {
     "hide-output": false
    },
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90071e8a",
+   "id": "440d913e",
    "metadata": {
     "hide-output": false
    },
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bc2d2c",
+   "id": "8ec3ee19",
    "metadata": {},
    "source": [
     "**Conditional distribution**\n",
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157af71f",
+   "id": "25cf4c93",
    "metadata": {
     "hide-output": false
    },
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aabce4e",
+   "id": "f259c792",
    "metadata": {},
    "source": [
     "The mean and variance are computed by\n",
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df999b0",
+   "id": "ea9ca8a8",
    "metadata": {
     "hide-output": false
    },
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e946707",
+   "id": "573afa9c",
    "metadata": {},
    "source": [
     "Fix $ x=1 $."
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584e494e",
+   "id": "3ca7542c",
    "metadata": {
     "hide-output": false
    },
@@ -1925,7 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b1c14e",
+   "id": "22f3c9b2",
    "metadata": {
     "hide-output": false
    },
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d067e6",
+   "id": "d57d071e",
    "metadata": {},
    "source": [
     "We compare  with the analytically computed parameters and note that they are close."
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a40fb8",
+   "id": "b2e3704e",
    "metadata": {
     "hide-output": false
    },
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e0b953",
+   "id": "9c0913b3",
    "metadata": {},
    "source": [
     "## Sum of Two Independently Distributed Random Variables\n",
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ba22ad7",
+   "id": "e14a4ffc",
    "metadata": {},
    "source": [
     "## Transition Probability Matrix\n",
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a5487d",
+   "id": "46dffcbe",
    "metadata": {},
    "source": [
     "## Coupling\n",
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701a296f",
+   "id": "f14aea52",
    "metadata": {},
    "source": [
     "## Copula Functions\n",
@@ -2245,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02b33c2",
+   "id": "f44ff8be",
    "metadata": {
     "hide-output": false
    },
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44796063",
+   "id": "4010b53e",
    "metadata": {
     "hide-output": false
    },
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac7ffa33",
+   "id": "28b2a0b7",
    "metadata": {},
    "source": [
     "Let’s now take our two marginal  distributions, one for $ X $, the other for  $ Y $, and construct  two distinct couplings.\n",
@@ -2327,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e14ce2",
+   "id": "e342faec",
    "metadata": {
     "hide-output": false
    },
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232b8c75",
+   "id": "b5ef18ca",
    "metadata": {
     "hide-output": false
    },
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5419be",
+   "id": "c249bc7c",
    "metadata": {
     "hide-output": false
    },
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df1d77d",
+   "id": "0a6a398e",
    "metadata": {},
    "source": [
     "Now, let’s construct another  joint distribution that is  also a coupling of $ X $ and $ Y $\n",
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771c7d33",
+   "id": "3bdad6a7",
    "metadata": {
     "hide-output": false
    },
@@ -2467,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099613d9",
+   "id": "83e5222a",
    "metadata": {
     "hide-output": false
    },
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce99685",
+   "id": "a32a8e34",
    "metadata": {
     "hide-output": false
    },
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4bff8b0",
+   "id": "d9295172",
    "metadata": {},
    "source": [
     "We have verified that both joint distributions, $ c_1 $ and $ c_2 $, have identical marginal distributions of $ X $ and $ Y $, respectively.\n",
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812bd5b2",
+   "id": "c1e7bbc1",
    "metadata": {},
    "source": [
     "## Time Series\n",
@@ -2568,7 +2568,7 @@
   }
  ],
  "metadata": {
-  "date": 1706246575.8898537,
+  "date": 1706493930.085523,
   "filename": "prob_matrix.md",
   "kernelspec": {
    "display_name": "Python",
