--- a/rand_resp.ipynb
+++ b/rand_resp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7ca9a16",
+   "id": "a943b8d5",
    "metadata": {},
    "source": [
     "# Randomized Response Surveys"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9247aadc",
+   "id": "32d5add1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -21,7 +21,7 @@
     "\n",
     "These problems induce  **selection**  biases that present challenges to interpreting and designing surveys.\n",
     "\n",
-    "To illustrate how social scientists have thought about estimating the prevalence of such embarrassing activities and opinions, this lecture describes a classic approach  of S. L. Warner [[War65](https://python.quantecon.org/zreferences.html#id247)].\n",
+    "To illustrate how social scientists have thought about estimating the prevalence of such embarrassing activities and opinions, this lecture describes a classic approach  of S. L. Warner [[War65](https://python.quantecon.org/zreferences.html#id249)].\n",
     "\n",
     "Warner  used elementary  probability to construct a  way to protect the privacy  of **individual** respondents to surveys while still    estimating  the fraction of a **collection** of individuals   who have a socially stigmatized characteristic or who engage in  a socially stigmatized activity.\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e265d9ae",
+   "id": "4d635ffe",
    "metadata": {},
    "source": [
     "## Warner’s Strategy\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1deef233",
+   "id": "aa7cc3e6",
    "metadata": {
     "hide-output": false
    },
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81938830",
+   "id": "c2168337",
    "metadata": {},
    "source": [
     "Suppose that every person in population either belongs to Group A or Group B.\n",
     "\n",
     "We want to estimate the proportion $ \\pi $ who belong to Group A while protecting individual respondents’ privacy.\n",
     "\n",
-    "Warner [[War65](https://python.quantecon.org/zreferences.html#id247)] proposed and analyzed the following procedure.\n",
+    "Warner [[War65](https://python.quantecon.org/zreferences.html#id249)] proposed and analyzed the following procedure.\n",
     "\n",
     "- A  random sample of $ n $ people is drawn with replacement from the population and  each person is interviewed.  \n",
     "- Draw $ n $ random samples from the population with replacement and interview each person.  \n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6b6aee",
+   "id": "52afdc53",
    "metadata": {},
    "source": [
     "## Comparing Two Survey Designs\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c9bed5f",
+   "id": "c9cf6b0a",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84b4a9d",
+   "id": "24f907c1",
    "metadata": {},
    "source": [
     "Let’s put the code to work for parameter values\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0679038",
+   "id": "553b50be",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d61fcb",
+   "id": "0e5eb1ad",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee684d7c",
+   "id": "3974eb7d",
    "metadata": {},
    "source": [
     "The theoretical calculations  do a good job of predicting  Monte Carlo results.\n",
@@ -360,7 +360,7 @@
     "\n",
     "By adjusting  parameters $ \\pi_A $ and $ n $, we can study outcomes in different situations.\n",
     "\n",
-    "For example, for another situation described in Warner [[War65](https://python.quantecon.org/zreferences.html#id247)]:\n",
+    "For example, for another situation described in Warner [[War65](https://python.quantecon.org/zreferences.html#id249)]:\n",
     "\n",
     "- $ \\pi_A=0.5 $  \n",
     "- $ n=1000 $  \n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5715a611",
+   "id": "4db8edf3",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae5f667",
+   "id": "777ff7e1",
    "metadata": {
     "hide-output": false
    },
@@ -398,10 +398,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eb9f874",
+   "id": "21f6b468",
    "metadata": {},
    "source": [
-    "We can also revisit a calculation in the  concluding section of Warner [[War65](https://python.quantecon.org/zreferences.html#id247)] in which\n",
+    "We can also revisit a calculation in the  concluding section of Warner [[War65](https://python.quantecon.org/zreferences.html#id249)] in which\n",
     "\n",
     "- $ \\pi_A=0.6 $  \n",
     "- $ n=2000 $  \n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f304f51d",
+   "id": "ced4dab0",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b048e536",
+   "id": "5d4debb8",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625dc858",
+   "id": "03e792cc",
    "metadata": {},
    "source": [
     "Evidently, as $ n $ increases, the randomized response method does  better performance in more situations."
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48ceaf2",
+   "id": "5471cd03",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -455,12 +455,12 @@
     "[This QuantEcon lecture](https://python.quantecon.org/util_rand_resp.html)  describes some alternative randomized response surveys.\n",
     "\n",
     "That lecture presents a utilitarian analysis of those alternatives conducted by Lars Ljungqvist\n",
-    "[[Lju93](https://python.quantecon.org/zreferences.html#id248)]."
+    "[[Lju93](https://python.quantecon.org/zreferences.html#id250)]."
    ]
   }
  ],
  "metadata": {
-  "date": 1706246575.9701364,
+  "date": 1706493930.170094,
   "filename": "rand_resp.md",
   "kernelspec": {
    "display_name": "Python",
