--- a/wald_friedman.ipynb
+++ b/wald_friedman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10f17800",
+   "id": "d4ddcbbe",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd46a53f",
+   "id": "8837d87c",
    "metadata": {},
    "source": [
     "# A Problem that Stumped Milton Friedman\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191cf489",
+   "id": "cdd7d85d",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4965d7cf",
+   "id": "ce102eec",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e0c818",
+   "id": "6829a5ba",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29ba9f78",
+   "id": "e01dad2e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776490f0",
+   "id": "78894354",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ff3497",
+   "id": "92f1c3ab",
    "metadata": {},
    "source": [
     "This lecture uses ideas studied in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), [this lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ee5257",
+   "id": "d1f659f4",
    "metadata": {},
    "source": [
     "## Origin of the Problem\n",
@@ -128,6 +128,11 @@
     "Milton Friedman described a problem presented to him and Allen Wallis\n",
     "during World War II, when they worked at the US Government’s\n",
     "Statistical Research Group at Columbia University.\n",
+    "\n",
+    ">**Note**\n",
+    ">\n",
+    ">See pages 25 and 26  of Allen Wallis’s 1980 article [[Wal80](https://python.quantecon.org/zreferences.html#id243)]  about the Statistical Research Group at Columbia University during World War II for his account of the episode and  for important contributions  that Harold Hotelling made to formulating the problem.   Also see  chapter 5 of Jennifer Burns book about\n",
+    "Milton Friedman [[Bur23](https://python.quantecon.org/zreferences.html#id244)].\n",
     "\n",
     "Let’s listen to Milton Friedman tell us what happened\n",
     "\n",
@@ -170,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50acbb39",
+   "id": "12f2d621",
    "metadata": {},
    "source": [
     "## A Dynamic Programming Approach\n",
@@ -248,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62a7a40d",
+   "id": "7b447428",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26dbfa3",
+   "id": "a03fd75d",
    "metadata": {},
    "source": [
     "### Losses and Costs\n",
@@ -311,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b0290c",
+   "id": "6a04f388",
    "metadata": {},
    "source": [
     "### Digression on Type I and Type II Errors\n",
@@ -333,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02d9049",
+   "id": "3f400552",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ec978d6",
+   "id": "65015dae",
    "metadata": {},
    "source": [
     "### A Bellman Equation\n",
@@ -485,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca04c5f6",
+   "id": "62341662",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -496,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd383b7d",
+   "id": "058c354b",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26feabe",
+   "id": "8a69cb91",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd16c577",
+   "id": "b71dcfac",
    "metadata": {},
    "source": [
     "As in the [optimal growth lecture](https://quantecon.github.io/lecture-dynamics/optgrowth.html), to approximate a continuous value function\n",
@@ -593,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9986904c",
+   "id": "f9a76940",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef098d77",
+   "id": "53de5dad",
    "metadata": {},
    "source": [
     "To solve the key functional equation, we will iterate using `Q` to find the fixed point"
@@ -642,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4199568b",
+   "id": "8eb4424c",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c92d958",
+   "id": "6c27987f",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -688,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60d59df",
+   "id": "e58db629",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0e403c",
+   "id": "2b9cc5d0",
    "metadata": {},
    "source": [
     "### Value Function\n",
@@ -718,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "237528c2",
+   "id": "1877fcf0",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6291bc7",
+   "id": "6465b0de",
    "metadata": {},
    "source": [
     "We will also set up a function to compute the cutoffs $ \\alpha $ and $ \\beta $\n",
@@ -739,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2e46ee",
+   "id": "947dff05",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28349e0c",
+   "id": "e2223b15",
    "metadata": {},
    "source": [
     "The cost function $ J $ equals $ \\pi L_1 $ for $ \\pi \\leq \\beta $, and $ (1-\\pi )L_0 $ for $ \\pi\n",
@@ -820,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4b5234",
+   "id": "75ffaf56",
    "metadata": {},
    "source": [
     "### Simulations\n",
@@ -839,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d956ad1a",
+   "id": "f3960621",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8254c5e5",
+   "id": "b46f10db",
    "metadata": {},
    "source": [
     "### Comparative Statics\n",
@@ -957,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725fabb5",
+   "id": "bb2d1947",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb7a174",
+   "id": "bec331c1",
    "metadata": {},
    "source": [
     "Increased cost per draw has induced the decision-maker to take fewer draws before deciding.\n",
@@ -981,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0180b0",
+   "id": "2b0b6698",
    "metadata": {},
    "source": [
     "### A Notebook Implementation\n",
@@ -1003,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b241841",
+   "id": "c3c3d0d9",
    "metadata": {},
    "source": [
     "## Comparison with Neyman-Pearson Formulation\n",
@@ -1177,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42513b04",
+   "id": "bca395f0",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1198,7 +1203,7 @@
   }
  ],
  "metadata": {
-  "date": 1706246576.225045,
+  "date": 1706493930.310227,
   "filename": "wald_friedman.md",
   "kernelspec": {
    "display_name": "Python",
